add http only authorizatotion and logout